src/core-crm/objects/hed__Application__c/fields/Offered_Attendance_Mode__c.field-meta.xml
<CustomField>
    <fullName>Offered_Attendance_Mode__c</fullName>
    <description>The attendance mode of the offer.</description>
    <label>Offered Attendance Mode</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Non-Supervised Candidature</fullName>
            </value>
            <value>
                <fullName>Block</fullName>
            </value>
            <value>
                <fullName>External</fullName>
            </value>
            <value>
                <fullName>Internal</fullName>
            </value>
            <value>
                <fullName>Multi Modal</fullName>
            </value>
            <value>
                <fullName>Not entered</fullName>
            </value>
            <value>
                <fullName>Online</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>