src/core-crm/objects/hed__Application__c/fields/Offered_Preference__c.field-meta.xml
<CustomField>
    <fullName>Offered_Preference__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The Current Program on offer in Studylink</description>
    <label>Offered Preference</label>
    <referenceTo>Application_Preference__c</referenceTo>
    <relationshipLabel>Applications</relationshipLabel>
    <relationshipName>Applications</relationshipName>
    <type>Lookup</type>
</CustomField>