src/core-crm/objects/hed__Application__c/fields/Offered_Program_Plan__c.field-meta.xml
<CustomField>
    <fullName>Offered_Program_Plan__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Course offered in response to study application.</description>
    <label>Offered Program</label>
    <referenceTo>hed__Program_Plan__c</referenceTo>
    <relationshipLabel>Applications</relationshipLabel>
    <relationshipName>Applications</relationshipName>
    <type>Lookup</type>
</CustomField>