src/core-crm/objects/hed__Application__c/fields/Pathway_Principle_Program__c.field-meta.xml
<CustomField>
    <fullName>Pathway_Principle_Program__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The Priniciple Course the pathy leads to.</description>
    <label>Pathway Principle Program</label>
    <referenceTo>hed__Program_Plan__c</referenceTo>
    <relationshipLabel>Applications (Pathway Principle Program)</relationshipLabel>
    <relationshipName>Applications1</relationshipName>
    <type>Lookup</type>
</CustomField>