src/core-crm/objects/hed__Application__c/fields/Postal_Address_Line1__c.field-meta.xml
<CustomField>
    <fullName>Postal_Address_Line1__c</fullName>
    <label>Postal Address Line 1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>