src/core-crm/objects/hed__Application__c/fields/Postal_Address_Line3__c.field-meta.xml
<CustomField>
    <fullName>Postal_Address_Line3__c</fullName>
    <label>Postal Address Line 3</label>
    <length>255</length>
    <type>Text</type>
</CustomField>