src/core-crm/objects/hed__Application__c/fields/Postal_Country__c.field-meta.xml
<CustomField>
    <fullName>Postal_Country__c</fullName>
    <label>Postal Country</label>
    <length>255</length>
    <type>Text</type>
</CustomField>