src/core-crm/objects/hed__Application__c/fields/Postal_Postcode__c.field-meta.xml
<CustomField>
    <fullName>Postal_Postcode__c</fullName>
    <label>Postal Postcode</label>
    <length>255</length>
    <type>Text</type>
</CustomField>