src/core-crm/objects/hed__Application__c/fields/Postal_State__c.field-meta.xml
<CustomField>
    <fullName>Postal_State__c</fullName>
    <label>Postal State</label>
    <length>255</length>
    <type>Text</type>
</CustomField>