src/core-crm/objects/hed__Application__c/fields/Postal_Town__c.field-meta.xml
<CustomField>
    <fullName>Postal_Town__c</fullName>
    <label>Postal Town</label>
    <length>255</length>
    <type>Text</type>
</CustomField>