src/core-crm/objects/hed__Application__c/fields/Prior_QUT_History__c.field-meta.xml
<CustomField>
    <fullName>Prior_QUT_History__c</fullName>
    <description>Whether the applicant has studyied before, is new or current student</description>
    <label>Prior QUT History</label>
    <length>80</length>
    <type>Text</type>
</CustomField>