src/core-crm/objects/hed__Application__c/fields/QLD_School_Name__c.field-meta.xml
<CustomField>
    <fullName>QLD_School_Name__c</fullName>
    <description>Name of the Queensland high school the applicant studied if they studied in Queensland.</description>
    <label>QLD School Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>