src/core-crm/objects/hed__Application__c/fields/QSTEP_Applicant__c.field-meta.xml
<CustomField>
    <fullName>QSTEP_Applicant__c</fullName>
    <defaultValue>false</defaultValue>
    <label>QSTEP Applicant</label>
    <type>Checkbox</type>
</CustomField>