src/core-crm/objects/hed__Application__c/fields/QTAC_ApplicantID__c.field-meta.xml
<CustomField>
    <fullName>QTAC_ApplicantID__c</fullName>
    <description>The unique identifier of the the applicant in QTAC systems</description>
    <label>QTAC Applicant ID</label>
    <length>20</length>
    <type>Text</type>
</CustomField>