src/core-crm/objects/hed__Application__c/fields/QTAC_Application_ID__c.field-meta.xml
<CustomField>
    <fullName>QTAC_Application_ID__c</fullName>
    <description>The unique identifier of the Applicaiton in QTAC systems</description>
    <label>QTAC Application ID</label>
    <precision>13</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>