src/core-crm/objects/hed__Application__c/fields/QTAC_Import_ID__c.field-meta.xml
<CustomField>
    <fullName>QTAC_Import_ID__c</fullName>
    <description>The unique identifier of the import of QTAC data to StudyLink/ SAMS</description>
    <label>QTAC Import ID</label>
    <length>20</length>
    <type>Text</type>
</CustomField>