src/core-crm/objects/hed__Application__c/fields/QTAC_Offer_Exists__c.field-meta.xml
<CustomField>
    <fullName>QTAC_Offer_Exists__c</fullName>
    <description>Whether an offer exists for this preference</description>
    <label>QTAC Offer Exists</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>