src/core-crm/objects/hed__Application__c/fields/QTAC_Offer_Round__c.field-meta.xml
<CustomField>
    <fullName>QTAC_Offer_Round__c</fullName>
    <description>The QTAC offer round that generated the application in StudyLink/ SAMS</description>
    <label>QTAC Offer Round</label>
    <precision>13</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField> 