src/core-crm/objects/hed__Application__c/fields/QUT_Student_ID__c.field-meta.xml
<CustomField>
    <fullName>QUT_Student_ID__c</fullName>
    <description>The QUT Student ID indicated in StudyLink based on previous interaction or study in QUT that is yet to be qualified in SAMS</description>
    <label>QUT Student ID</label>
    <length>11</length>
    <type>Text</type>
</CustomField>