src/core-crm/objects/hed__Application__c/fields/Related_QTAC_Application__c.field-meta.xml
<CustomField>
    <fullName>Related_QTAC_Application__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Linking SAMS application back to originating QTAC application record</description>
    <label>Related QTAC Application</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>hed__Application__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>QTAC</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>hed__Application__c</referenceTo>
    <relationshipLabel>Applications</relationshipLabel>
    <relationshipName>Applications</relationshipName>
    <type>Lookup</type>
</CustomField>