src/core-crm/objects/hed__Application__c/fields/Related_Studylink_Application__c.field-meta.xml
<CustomField>
    <fullName>Related_Studylink_Application__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Linking SAMS application back to orginatying Studylink Application record</description>
    <label>Related Studylink Application</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>hed__Application__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>StudyLink</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>hed__Application__c</referenceTo>
    <relationshipLabel>Applications (Related Studylink Application)</relationshipLabel>
    <relationshipName>Applications1</relationshipName>
    <type>Lookup</type>
</CustomField>