src/core-crm/objects/hed__Application__c/fields/Residential_Address_Line2__c.field-meta.xml
<CustomField>
    <fullName>Residential_Address_Line2__c</fullName>
    <label>Residential Address Line 2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>