src/core-crm/objects/hed__Application__c/fields/Residential_Address_Line3__c.field-meta.xml
<CustomField>
    <fullName>Residential_Address_Line3__c</fullName>
    <label>Residential Address Line 3</label>
    <length>255</length>
    <type>Text</type>
</CustomField>