src/core-crm/objects/hed__Application__c/fields/Residential_Country__c.field-meta.xml
<CustomField>
    <fullName>Residential_Country__c</fullName>
    <label>Residential Country</label>
    <length>255</length>
    <type>Text</type>
</CustomField>