src/core-crm/objects/hed__Application__c/fields/Residential_Postcode__c.field-meta.xml
<CustomField>
    <fullName>Residential_Postcode__c</fullName>
    <label>Residential Postcode</label>
    <length>255</length>
    <type>Text</type>
</CustomField>