src/core-crm/objects/hed__Application__c/fields/Residential_State__c.field-meta.xml
<CustomField>
    <fullName>Residential_State__c</fullName>
    <label>Residential State</label>
    <length>255</length>
    <type>Text</type>
</CustomField>