src/core-crm/objects/hed__Application__c/fields/Residential_Town__c.field-meta.xml
<CustomField>
    <fullName>Residential_Town__c</fullName>
    <label>Residential Town</label>
    <length>255</length>
    <type>Text</type>
</CustomField>