src/core-crm/objects/hed__Application__c/fields/RRR_Access_Scheme__c.field-meta.xml
<CustomField>
    <fullName>RRR_Access_Scheme__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Rural, Regional and Remote Access Scheme</description>
    <label>Rural, Regional, Remote Access Scheme</label>
    <type>Checkbox</type>
</CustomField>