src/core-crm/objects/hed__Application__c/fields/Salutation__c.field-meta.xml
<CustomField>
    <fullName>Salutation__c</fullName>
    <description>The Salutation captured from QTAC application.</description>
    <label>Salutation</label>
    <length>80</length>
    <type>Text</type>
</CustomField>