src/core-crm/objects/hed__Application__c/fields/Scholarship_Name__c.field-meta.xml
<CustomField>
    <fullName>Scholarship_Name__c</fullName>
    <description>Name of the scholarship</description>
    <label>Scholarship Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>