src/core-crm/objects/hed__Application__c/fields/Scholarship_Status__c.field-meta.xml
<CustomField>
    <fullName>Scholarship_Status__c</fullName>
    <description>The status of the scholarship application</description>
    <label>Scholarship Status</label>
    <length>80</length>
    <type>Text</type>
</CustomField>