src/core-crm/objects/hed__Application__c/fields/Study_Link_ApplicantID__c.field-meta.xml
<CustomField>
    <fullName>Study_Link_ApplicantID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The unique identifier of the applicant in Study Link system</description>
    <label>Study Link Applicant</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Applications (Study Link Applicant)</relationshipLabel>
    <relationshipName>Applications</relationshipName>
    <type>Lookup</type>
</CustomField>