src/core-crm/objects/hed__Application__c/fields/StudyLink_ApplicantID__c.field-meta.xml
<CustomField>
    <fullName>StudyLink_ApplicantID__c</fullName>
    <description>The unique identifier of the applicant in StudyLink system</description>
    <label>StudyLink Applicant ID</label>
    <length>20</length>
    <type>Text</type>
</CustomField>