src/core-crm/objects/hed__Application__c/fields/StudyLink_ApplicationID__c.field-meta.xml
<CustomField>
    <fullName>StudyLink_ApplicationID__c</fullName>
    <description>The unique identifier of the application in StudyLink system</description>
    <label>StudyLink Application ID</label>
    <length>20</length>
    <type>Text</type>
</CustomField>