src/core-crm/objects/hed__Application__c/fields/StudyLink_Offered_Program_Code__c.field-meta.xml
<CustomField>
    <fullName>StudyLink_Offered_Program_Code__c</fullName>
    <description>The course code offered as per StudyLink</description>
    <label>StudyLink Offered Program Code</label>
    <length>80</length>
    <type>Text</type>
</CustomField>