src/core-crm/objects/hed__Application__c/fields/StudyLink_Offered_Program_Name__c.field-meta.xml
<CustomField>
    <fullName>StudyLink_Offered_Program_Name__c</fullName>
    <description>The course name offered as per StudyLink</description>
    <label>StudyLink Offered Program Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>