src/core-crm/objects/hed__Application__c/fields/StudyLink_Program_Code__c.field-meta.xml
<CustomField>
    <fullName>StudyLink_Program_Code__c</fullName>
    <description>The StudyLink course code</description>
    <label>StudyLink Program Code</label>
    <length>80</length>
    <type>Text</type>
</CustomField>