src/core-crm/objects/hed__Application__c/fields/StudyLink_Program_Faculty__c.field-meta.xml
<CustomField>
    <fullName>StudyLink_Program_Faculty__c</fullName>
    <description>The faculty that owns the course</description>
    <label>StudyLink Program Faculty</label>
    <length>150</length>
    <type>Text</type>
</CustomField>