src/core-crm/objects/hed__Application__c/fields/StudyLink_Program_Level__c.field-meta.xml
<CustomField>
    <fullName>StudyLink_Program_Level__c</fullName>
    <description>The course level eg undergrad Bachelors or post grad Masters etc</description>
    <label>StudyLink Program Level</label>
    <length>80</length>
    <type>Text</type>
</CustomField>