src/core-crm/objects/hed__Application__c/fields/StudyLink_Program_Location__c.field-meta.xml
<CustomField>
    <fullName>StudyLink_Program_Location__c</fullName>
    <description>The campus the course is being offered at</description>
    <label>StudyLink Program Location</label>
    <length>80</length>
    <type>Text</type>
</CustomField>