src/core-crm/objects/hed__Application__c/fields/StudyLink_Program_Name__c.field-meta.xml
<CustomField>
    <fullName>StudyLink_Program_Name__c</fullName>
    <description>The course represented as study package title in StudyLink</description>
    <label>StudyLink Program Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>