src/core-crm/objects/hed__Application__c/fields/StudyLink_Program_URL__c.field-meta.xml
<CustomField>
    <fullName>StudyLink_Program_URL__c</fullName>
    <description>The URL of the course information on QUT website</description>
    <label>StudyLink Program URL</label>
    <length>500</length>
    <type>LongTextArea</type>
</CustomField>