src/core-crm/objects/hed__Application__c/fields/Year_of_Arrival__c.field-meta.xml
<CustomField>
    <fullName>Year_of_Arrival__c</fullName>
    <description>The year that contact arrived to Australia.</description>
    <label>Year of Arrival</label>
    <length>4</length>
    <type>Text</type>
</CustomField>