src/core-crm/objects/hed__Application__c/recordTypes/SAMS.recordType-meta.xml
<RecordType>
    <fullName>SAMS</fullName>
    <active>true</active>
    <label>SAMS</label>
</RecordType>