src/core-crm/objects/hed__Application__c/recordTypes/SAMS_CIAnywhere.recordType-meta.xml
<RecordType>
    <fullName>SAMS_CIAnywhere</fullName>
    <active>true</active>
    <label>SAMS CIAnywhere</label>
</RecordType>