src/core-crm/objects/hed__Application__c/recordTypes/SAMS_Legacy.recordType-meta.xml
<RecordType>
    <fullName>SAMS_Legacy</fullName>
    <active>true</active>
    <label>SAMS Legacy</label>
</RecordType>