src/core-crm/objects/hed__Application__c/recordTypes/StudyLink.recordType-meta.xml
<RecordType>
    <fullName>StudyLink</fullName>
    <active>true</active>
    <label>StudyLink</label>
</RecordType>